<resources>
    <string name="app_name">MedTracker</string>
    <string name="login_title">Log In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_button_txt">Log in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup_button_txt">Sign up</string>
    <string name="hello_user">Hello, user</string>
    <string name="date">03/10/2020</string>
    <string name="steps">500 steps taken</string>
    <string name="add_med_button_txt">add medication</string>
    <string name="add_sym_button_txt">add symptoms</string>
    <string name="coming_up">Coming up...</string>
    <string name="medication1">• medication XYZ - 03/12/2020 5:00 PM</string>
    <string name="medication2">• medication ABC - 03/13/2020 10:00 PM</string>
    <string name="see_all_button_txt">See All</string>
    <string name="medications_title">Medications</string>
    <string name="search">Search</string>
    <string name="medv">• Med V - 15 mg</string>
    <string name="medy">• Med Y - 12 mg</string>
    <string name="medv_status">Taken 1/12/2020</string>
    <string name="medy_status">Snoozed</string>
    <string name="plus_btn_txt">+</string>
    <string name="add_medication_title">Add Medication</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="appearance">Appearance</string>
    <string name="add_reminder_q">Add Reminder</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_title">Date</string>
    <string name="notes">Notes</string>
    <string name="steps_btn_txt">Steps</string>
    <string name="steps_taken_title">Steps Taken</string>
    <string name="symptoms_title">Symptoms</string>
    <string name="date1">• 08/13/2019</string>
    <string name="date2">• 10/03/2019</string>
    <string name="sym1">- Dizziness</string>
    <string name="sym12">- Dry Mouth</string>
    <string name="sym3">- Restless</string>
    <string name="add_sym_title">Add Symptoms</string>
    <string name="notes_title">Notes</string>
    <string name="note1">- Doctor said to rest.</string>
    <string name="note2">- Worked out...</string>
    <string name="add_note_title">Add Notes</string>
    <string name="date_for_notes">Date</string>
    <string name="dosage_title">Dosage (in mg)</string>
    <string name="time_title">Time</string>
    <string name="x_button">x</string>
    <string name="check_button">√</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_add_new_user">AddNewUser</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="fname_hint">Enter your first name</string>
    <string name="lname_hint">Enter your last name</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter a password</string>
    <string name="reenterpass_hint">Reenter password</string>
    <string name="birthday_hint">Enter your birthday</string>
</resources>
