<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewUser">

    <TextView
        android:id="@+id/errorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:textColor="#E8D52D2D"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reenterPass" />

    <EditText
        android:id="@+id/reenterPass"
        android:layout_width="345dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/reenterpass_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/birthday_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/lname_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/fname_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptitle"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="345dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBox"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        tools:ignore="MissingConstraints" />

    <TextView

        android:id="@+id/signuptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="70dp"
        android:text="@string/sign_up_header"
        android:textColor="#4566C8"
        android:textSize="60dp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/toolbar11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="356dp"
        android:layout_height="8dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:background="#4566C8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptitle"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="139dp"
        android:layout_height="58dp"
        android:layout_marginBottom="48dp"
        android:background="#03A9F4"
        android:text="@string/signup_button_txt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reenterPass"
        app:layout_constraintVertical_bias="0.388"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>