<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_sym_btn_sym"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/circle_button"
        android:text="@string/plus_btn_txt"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="654dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar8"
        android:layout_width="354dp"
        android:layout_height="7dp"
        android:background="#4566C8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note_title"
        android:textColor="#4566C8"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="45dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_for_notes"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="154dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="24dp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="300dp" />

    <EditText
        android:id="@+id/editDateText"
        android:layout_width="353dp"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/editNoteText"
        android:layout_width="351dp"
        android:layout_height="68dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="349dp" />

</androidx.constraintlayout.widget.ConstraintLayout>