<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="411dp"
        android:layout_height="823dp"
        tools:visibility="visible">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="382dp"
            android:layout_height="427dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="372dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_corners_box"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_med"
            android:layout_width="196dp"
            android:layout_height="65dp"
            android:layout_marginStart="106dp"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="31dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/add_med_button_txt"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps_textview"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="11dp"
            android:text="@string/medication1"
            android:textColor="#313E88"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="50dp"
            android:text="@string/medication2"
            android:textColor="#313E88"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/to_medications_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="8dp"
            android:text="@string/date"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/steps_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button3"
            android:layout_width="196dp"
            android:layout_height="65dp"
            android:layout_marginStart="106dp"
            android:layout_marginEnd="109dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/add_sym_button_txt"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_med"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/steps_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="30dp"
            android:text="@string/steps"
            android:textColor="#03A9F4"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/add_med"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_textview"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="350dp"
            android:layout_height="12dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="41dp"
            android:background="#4566C8"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="121dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="2dp"
            android:text="@string/coming_up"
            android:textColor="#4566C8"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/to_medications_btn"
            android:layout_width="165dp"
            android:layout_height="69dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="138dp"
            android:background="@drawable/rounded_corners_dark_blue"
            android:text="@string/see_all_button_txt"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>